// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wolken configuration_items configuration_items 1`] = `
Array [
  "Processed 2 records",
  "Processed records by stream: {\\\\\\"mytestsource__wolken__configuration_items\\\\\\":1,\\\\\\"mytestsource__wolken__users\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 17 records",
  "Would write records by model: {\\\\\\"compute_Application\\\\\\":1,\\\\\\"compute_ApplicationPath\\\\\\":1,\\\\\\"compute_ApplicationTag\\\\\\":5,\\\\\\"faros_Path\\\\\\":1,\\\\\\"faros_Tag\\\\\\":6,\\\\\\"ims_User\\\\\\":1,\\\\\\"tms_ProjectPath\\\\\\":1,\\\\\\"tms_ProjectTag\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`wolken configuration_items configuration_items 2`] = `
Array [
  Object {
    "ims_User": Object {
      "email": "john.doe@example.com",
      "name": "John Smith",
      "source": "Wolken",
      "uid": "12345",
    },
  },
  Object {
    "compute_Application": Object {
      "displayName": "Test Application",
      "name": "Test App",
      "platform": "A3F91B6D",
      "source": "Wolken",
      "uid": "Test App_A3F91B6D",
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Application Display Name",
      "source": "Wolken",
      "uid": "Application Display Name__Test Application",
      "value": "Test Application",
    },
  },
  Object {
    "compute_ApplicationTag": Object {
      "application": Object {
        "name": "Test App",
        "platform": "A3F91B6D",
        "uid": "Test App_A3F91B6D",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Application Display Name__Test Application",
      },
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Environment",
      "source": "Wolken",
      "uid": "Environment__Production",
      "value": "Production",
    },
  },
  Object {
    "compute_ApplicationTag": Object {
      "application": Object {
        "name": "Test App",
        "platform": "A3F91B6D",
        "uid": "Test App_A3F91B6D",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Environment__Production",
      },
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Engineering Owner",
      "source": "Wolken",
      "uid": "Engineering Owner__john.doe@example.com",
      "value": "john.doe@example.com",
    },
  },
  Object {
    "compute_ApplicationTag": Object {
      "application": Object {
        "name": "Test App",
        "platform": "A3F91B6D",
        "uid": "Test App_A3F91B6D",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Engineering Owner__john.doe@example.com",
      },
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Engineering Owner Department",
      "source": "Wolken",
      "uid": "Engineering Owner Department__DEP1",
      "value": "DEP1",
    },
  },
  Object {
    "compute_ApplicationTag": Object {
      "application": Object {
        "name": "Test App",
        "platform": "A3F91B6D",
        "uid": "Test App_A3F91B6D",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Engineering Owner Department__DEP1",
      },
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Engineering Owner Division",
      "source": "Wolken",
      "uid": "Engineering Owner Division__DIV1",
      "value": "DIV1",
    },
  },
  Object {
    "compute_ApplicationTag": Object {
      "application": Object {
        "name": "Test App",
        "platform": "A3F91B6D",
        "uid": "Test App_A3F91B6D",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Engineering Owner Division__DIV1",
      },
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Engineering Owner",
      "source": "Wolken",
      "uid": "Engineering Owner__john.doe@example.com",
      "value": "john.doe@example.com",
    },
  },
  Object {
    "tms_ProjectTag": Object {
      "project": Object {
        "source": "Jira",
        "uid": "FAROS",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Engineering Owner__john.doe@example.com",
      },
    },
  },
  Object {
    "faros_Path": Object {
      "path": "A3F91B6D",
      "source": "Wolken",
      "uid": "A3F91B6D",
    },
  },
  Object {
    "compute_ApplicationPath": Object {
      "application": Object {
        "name": "Test App",
        "platform": "A3F91B6D",
        "uid": "Test App_A3F91B6D",
      },
      "path": Object {
        "uid": "A3F91B6D",
      },
      "source": "Wolken",
    },
  },
  Object {
    "tms_ProjectPath": Object {
      "path": Object {
        "uid": "A3F91B6D",
      },
      "project": Object {
        "source": "Jira",
        "uid": "FAROS",
      },
      "source": "Wolken",
    },
  },
]
`;

exports[`wolken incidents incident application impact 1`] = `
Array [
  "Processed 3 records",
  "Processed records by stream: {\\\\\\"mytestsource__wolken__configuration_items\\\\\\":1,\\\\\\"mytestsource__wolken__incidents\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 16 records",
  "Would write records by model: {\\\\\\"__Flush\\\\\\":1,\\\\\\"compute_Application\\\\\\":1,\\\\\\"faros_Tag\\\\\\":4,\\\\\\"ims_Incident\\\\\\":2,\\\\\\"ims_IncidentApplicationImpact\\\\\\":1,\\\\\\"ims_IncidentApplicationImpact__Deletion\\\\\\":2,\\\\\\"ims_IncidentAssignment\\\\\\":1,\\\\\\"ims_IncidentFarosTag\\\\\\":4}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`wolken incidents incident application impact 2`] = `
Array [
  Object {
    "ims_Incident": Object {
      "createdAt": "2025-01-08T09:54:48.000Z",
      "description": "Support notification incident requiring investigation",
      "priority": Object {
        "category": "Low",
        "detail": "Low - P4",
      },
      "resolvedAt": "2025-01-23T09:02:12.000Z",
      "severity": Object {
        "category": "Sev3",
        "detail": "Medium",
      },
      "source": "Wolken",
      "status": Object {
        "category": "Resolved",
        "detail": "Closed",
      },
      "title": "Inc_Support_Notification",
      "uid": "123456",
      "updatedAt": "2025-01-23T09:02:39.000Z",
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Category",
      "source": "Wolken",
      "uid": "Category__N/A",
      "value": "N/A",
    },
  },
  Object {
    "ims_IncidentFarosTag": Object {
      "incident": Object {
        "source": "Wolken",
        "uid": "123456",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Category__N/A",
      },
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Subcategory",
      "source": "Wolken",
      "uid": "Subcategory__N/A",
      "value": "N/A",
    },
  },
  Object {
    "ims_IncidentFarosTag": Object {
      "incident": Object {
        "source": "Wolken",
        "uid": "123456",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Subcategory__N/A",
      },
    },
  },
  Object {
    "ims_IncidentAssignment": Object {
      "assignee": Object {
        "source": "Wolken",
        "uid": "10002",
      },
      "incident": Object {
        "source": "Wolken",
        "uid": "123456",
      },
      "source": "Wolken",
    },
  },
  Object {
    "compute_Application": Object {
      "displayName": null,
      "name": "Test App",
      "platform": "A3F91B6D",
      "source": "Wolken",
      "uid": "Test App_A3F91B6D",
    },
  },
  Object {
    "ims_Incident": Object {
      "createdAt": "2025-01-08T09:54:48.000Z",
      "description": "Support notification incident requiring investigation",
      "priority": Object {
        "category": "Low",
        "detail": "Low - P4",
      },
      "resolvedAt": "2025-01-23T09:02:12.000Z",
      "severity": Object {
        "category": "Sev3",
        "detail": "Medium",
      },
      "source": "Wolken",
      "status": Object {
        "category": "Resolved",
        "detail": "Closed",
      },
      "title": "Inc_Support_Notification",
      "uid": "123457",
      "updatedAt": "2025-01-23T09:02:39.000Z",
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Category",
      "source": "Wolken",
      "uid": "Category__N/A",
      "value": "N/A",
    },
  },
  Object {
    "ims_IncidentFarosTag": Object {
      "incident": Object {
        "source": "Wolken",
        "uid": "123457",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Category__N/A",
      },
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Subcategory",
      "source": "Wolken",
      "uid": "Subcategory__N/A",
      "value": "N/A",
    },
  },
  Object {
    "ims_IncidentFarosTag": Object {
      "incident": Object {
        "source": "Wolken",
        "uid": "123457",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Subcategory__N/A",
      },
    },
  },
  Object {
    "ims_IncidentApplicationImpact__Deletion": Object {
      "flushRequired": false,
      "source": "Wolken",
      "where": Object {
        "incident": Object {
          "source": "Wolken",
          "uid": "123456",
        },
      },
    },
  },
  Object {
    "ims_IncidentApplicationImpact__Deletion": Object {
      "flushRequired": false,
      "source": "Wolken",
      "where": Object {
        "incident": Object {
          "source": "Wolken",
          "uid": "123457",
        },
      },
    },
  },
  Object {
    "__Flush": Object {
      "source": "Wolken",
    },
  },
  Object {
    "ims_IncidentApplicationImpact": Object {
      "application": Object {
        "name": "Test App",
        "platform": "A3F91B6D",
        "uid": "Test App_A3F91B6D",
      },
      "incident": Object {
        "source": "Wolken",
        "uid": "123456",
      },
      "source": "Wolken",
    },
  },
]
`;

exports[`wolken incidents incidents 1`] = `
Array [
  "Processed 1 records",
  "Processed records by stream: {\\\\\\"mytestsource__wolken__incidents\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 6 records",
  "Would write records by model: {\\\\\\"faros_Tag\\\\\\":2,\\\\\\"ims_Incident\\\\\\":1,\\\\\\"ims_IncidentAssignment\\\\\\":1,\\\\\\"ims_IncidentFarosTag\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`wolken incidents incidents 2`] = `
Array [
  Object {
    "ims_Incident": Object {
      "createdAt": "2025-01-08T09:54:48.000Z",
      "description": "Support notification incident requiring investigation",
      "priority": Object {
        "category": "Low",
        "detail": "Low - P4",
      },
      "resolvedAt": "2025-01-23T09:02:12.000Z",
      "severity": Object {
        "category": "Sev3",
        "detail": "Medium",
      },
      "source": "Wolken",
      "status": Object {
        "category": "Resolved",
        "detail": "Closed",
      },
      "title": "Inc_Support_Notification",
      "uid": "123456",
      "updatedAt": "2025-01-23T09:02:39.000Z",
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Category",
      "source": "Wolken",
      "uid": "Category__N/A",
      "value": "N/A",
    },
  },
  Object {
    "ims_IncidentFarosTag": Object {
      "incident": Object {
        "source": "Wolken",
        "uid": "123456",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Category__N/A",
      },
    },
  },
  Object {
    "faros_Tag": Object {
      "key": "Subcategory",
      "source": "Wolken",
      "uid": "Subcategory__N/A",
      "value": "N/A",
    },
  },
  Object {
    "ims_IncidentFarosTag": Object {
      "incident": Object {
        "source": "Wolken",
        "uid": "123456",
      },
      "source": "Wolken",
      "tag": Object {
        "uid": "Subcategory__N/A",
      },
    },
  },
  Object {
    "ims_IncidentAssignment": Object {
      "assignee": Object {
        "source": "Wolken",
        "uid": "10002",
      },
      "incident": Object {
        "source": "Wolken",
        "uid": "123456",
      },
      "source": "Wolken",
    },
  },
]
`;

exports[`wolken users users 1`] = `
Array [
  "Processed 1 records",
  "Processed records by stream: {\\\\\\"mytestsource__wolken__users\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 1 records",
  "Would write records by model: {\\\\\\"ims_User\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`wolken users users 2`] = `
Array [
  Object {
    "ims_User": Object {
      "email": "test.user@company.com",
      "name": "John Smith",
      "source": "Wolken",
      "uid": "12345",
    },
  },
]
`;
